Fix title and description formatting in read.html

--- a/reflections/pages/the-lost-language-of-metaphor/read.html
+++ b/reflections/pages/the-lost-language-of-metaphor/read.html
@@ -4,12 +4,12 @@
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
 
-  <title>The Lost Language of Metaphor — Solitude Reflections · Ninox Antolihao</title>
-  <meta name="description" content="On why symbols used to reveal truth — and how literalism turns living meaning into dead rules." />
+  <title>The Lost Language of Metaphor -- Solitude Reflections · Ninox Antolihao</title>
+  <meta name="description" content="On why symbols used to reveal truth -- and how literalism turns living meaning into dead rules." />
 
   <link rel="canonical" href="https://stonegrillresto.net/reflections/pages/the-lost-language-of-metaphor/read.html" />
   <meta property="og:type" content="article" />
-  <meta property="og:title" content="The Lost Language of Metaphor — Solitude Reflections" />
+  <meta property="og:title" content="The Lost Language of Metaphor -- Solitude Reflections" />
   <meta property="og:description" content="A reflection on symbols, literalism, and the danger of confusing the map for the landscape." />
   <meta property="og:image" content="https://stonegrillresto.net/reflections/pages/the-lost-language-of-metaphor/lost-language-of-metaphor.jpg" />
   <meta property="og:url" content="https://stonegrillresto.net/reflections/pages/the-lost-language-of-metaphor/read.html" />
@@ -17,8 +17,7 @@
 
   <link rel="icon" href="/reflections/assets/favicon.ico" />
   <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=21" />
-  <link rel="stylesheet" href="/reflections/assets/reflections.css?v=1" />
-
+  <link rel="stylesheet" href="/reflections/assets/reflections.css?v=21">
   <style>
     :root{--bg:#1f1815;--paper:#2a211e;--ink:#f3e6dd;--muted:#c9b0a4;--accent:#ffb873;}
     body{margin:0;background:var(--bg);color:var(--ink);font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;line-height:1.75;}
@@ -34,16 +33,35 @@
 
 <body>
   
-  <div id="reflectionsHeader" data-current="the-lost-language-of-metaphor"></div>
-  <!-- AUDIO: native first; JS will enhance and auto-fallback -->
-  <section class="audio-wrap" id="audioMount" style="margin:16px 1rem;">
-    <p class="label">🎧<strong>the lost language of metaphor.</strong></p>
-    <audio id="nativeAudio" controls preload="auto" style="width:100%">
-      <source src="/reflections/pages/the-lost-language-of-metaphor/lost-language-of-metaphor.mp3" type="audio/mpeg">
-      Your browser does not support the audio element.
-    </audio>
-  </section>
+ <!-- ==============================
+     GLOBAL AUDIO BAR (ONE ONLY)
+     Pops up only when playing
+     ============================== -->
+<section class="audio-bar" id="globalPlayer" aria-label="Global audio player">
+  <div class="audio-bar__row">
+    <div class="audio-bar__title">
+      <span class="audio-bar__icon">🎧</span>
+      <span id="nowPlaying" class="audio-bar__now">-- select a track below</span>
+    </div>
 
+    <div class="audio-bar__buttons">
+      <button type="button" class="audio-btn" id="btnPrev" aria-label="Previous track">⏮</button>
+      <button type="button" class="audio-btn audio-btn--main" id="btnPlay" aria-label="Play/Pause">▶</button>
+      <button type="button" class="audio-btn" id="btnNext" aria-label="Next track">⏭</button>
+    </div>
+  </div>
+
+  <div class="audio-bar__row audio-bar__progress">
+    <span class="audio-time" id="timeNow">0:00</span>
+    <input type="range" id="seekBar" min="0" max="1000" value="0" step="1" aria-label="Seek">
+    <span class="audio-time" id="timeDur">0:00</span>
+  </div>
+
+  <!-- Keep the real audio element (hidden), used by your system -->
+  <audio id="globalAudio" preload="metadata">
+    <source id="globalSource" src="" type="audio/mpeg">
+  </audio>
+</section>
 
   <script>
     window.REFLECTION_PAGE = {
@@ -62,6 +80,20 @@
   <script src="/reflections/assets/reflections-header.js?v=21"></script>
 
   <main>
+  <div class="playlist">
+            <button class="track-link" type="button"
+                    data-src="/reflections/pages/the-lost-language-of-metaphor/lost-language-of-metaphor.mp3"
+                    data-title="the lost language of metaphor">
+              ▶ THE LOST LANGUAGE OF METAPHOR
+            </button>
+
+            <button class="track-link" type="button"
+                    data-src="/reflections/pages/the-god-we-created/the-gods-we-create.mp3"
+                    data-title="The God We Created">
+              ▶ The God We Created 
+            </button>
+          </div>
+          
     <article class="paper">
       <img class="cover" src="/reflections/pages/the-lost-language-of-metaphor/lostlanguagesmall.jpg" alt="The Lost Language of Metaphor cover">
 
@@ -73,7 +105,7 @@
 
       <p>
         Human beings once spoke to the deepest parts of life using metaphor.
-        Not because they were weak thinkers — but because some truths cannot be held
+        Not because they were weak thinkers -- but because some truths cannot be held
         by literal sentences without becoming distorted.
       </p>
 
