Refactor audio playback section in read.html
Removed the global audio bar and replaced it with a section for native audio playback.

--- a/reflections/pages/the-lost-language-of-metaphor/read.html
+++ b/reflections/pages/the-lost-language-of-metaphor/read.html
@@ -17,7 +17,8 @@
 
   <link rel="icon" href="/reflections/assets/favicon.ico" />
   <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=21" />
-  <link rel="stylesheet" href="/reflections/assets/reflections.css?v=21">
+  <link 
+  <link rel="stylesheet" href="/reflections/assets/reflections.css?v=20">
   <style>
     :root{--bg:#1f1815;--paper:#2a211e;--ink:#f3e6dd;--muted:#c9b0a4;--accent:#ffb873;}
     body{margin:0;background:var(--bg);color:var(--ink);font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;line-height:1.75;}
@@ -33,35 +34,16 @@
 
 <body>
   
- <!-- ==============================
-     GLOBAL AUDIO BAR (ONE ONLY)
-     Pops up only when playing
-     ============================== -->
-<section class="audio-bar" id="globalPlayer" aria-label="Global audio player">
-  <div class="audio-bar__row">
-    <div class="audio-bar__title">
-      <span class="audio-bar__icon">🎧</span>
-      <span id="nowPlaying" class="audio-bar__now">-- select a track below</span>
-    </div>
+  <div id="reflectionsHeader" data-current="the-lost-language-of-metaphor"></div>
+  <!-- AUDIO: native first; JS will enhance and auto-fallback -->
+  <section class="audio-wrap" id="audioMount" style="margin:16px 1rem;">
+    <p class="label">🎧<strong>the lost language of metaphor.</strong></p>
+    <audio id="nativeAudio" controls preload="auto" style="width:100%">
+      <source src="/reflections/pages/the-lost-language-of-metaphor/lost-language-of-metaphor.mp3" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
+  </section>
 
-    <div class="audio-bar__buttons">
-      <button type="button" class="audio-btn" id="btnPrev" aria-label="Previous track">⏮</button>
-      <button type="button" class="audio-btn audio-btn--main" id="btnPlay" aria-label="Play/Pause">▶</button>
-      <button type="button" class="audio-btn" id="btnNext" aria-label="Next track">⏭</button>
-    </div>
-  </div>
-
-  <div class="audio-bar__row audio-bar__progress">
-    <span class="audio-time" id="timeNow">0:00</span>
-    <input type="range" id="seekBar" min="0" max="1000" value="0" step="1" aria-label="Seek">
-    <span class="audio-time" id="timeDur">0:00</span>
-  </div>
-
-  <!-- Keep the real audio element (hidden), used by your system -->
-  <audio id="globalAudio" preload="metadata">
-    <source id="globalSource" src="" type="audio/mpeg">
-  </audio>
-</section>
 
   <script>
     window.REFLECTION_PAGE = {
@@ -80,20 +62,6 @@
   <script src="/reflections/assets/reflections-header.js?v=21"></script>
 
   <main>
-  <div class="playlist">
-            <button class="track-link" type="button"
-                    data-src="/reflections/pages/the-lost-language-of-metaphor/lost-language-of-metaphor.mp3"
-                    data-title="the lost language of metaphor">
-              ▶ THE LOST LANGUAGE OF METAPHOR
-            </button>
-
-            <button class="track-link" type="button"
-                    data-src="/reflections/pages/the-god-we-created/the-gods-we-create.mp3"
-                    data-title="The God We Created">
-              ▶ The God We Created 
-            </button>
-          </div>
-          
     <article class="paper">
       <img class="cover" src="/reflections/pages/the-lost-language-of-metaphor/lostlanguagesmall.jpg" alt="The Lost Language of Metaphor cover">
 
