--- a/reflections/index.html
+++ b/reflections/index.html
@@ -554,14 +554,26 @@
             <a class="title-link" href="/reflections/pages/the-paradox-of-god/The_Paradox_of_God.pdf" target="_blank" rel="noopener">PDF</a>
           </p>
 
-          <section class="audio-wrap" id="audioMount-lost-language">
-            <p class="label">🎧 : <strong>The Lost Language of Metaphor</strong></p>
-            <audio controls preload="auto" style="width:100%">
-              <source src="/reflections/pages/the-lost-language-of-metaphor/lost-language-of-metaphor.mp3" type="audio/mpeg">
-              Your browser does not support the audio element.
-            </audio>
-          </section>
+          <div class="playlist">
+            <button class="track-link" type="button"
+                    data-src="/reflections/pages/the-lost-language-of-metaphor/lost-language-of-metaphor.mp3"
+                    data-title="The LOST LANGUAGE OF METAPHOR">
+              ▶ The LOST LANGUAGE OF METAPHOR
+            </button>
+            
+             <button class="track-link" type="button"
+                    data-src="/reflections/pages/the-madness-of-fath/the-madness-of-faith.mp3"
+                    data-title="The Madness of Faith">
+              ▶ The Madness of Faith
+            </button>
 
+            <button class="track-link" type="button"
+                    data-src="/reflections/pages/the-paradox-of-god/paradoxofgod.mp3"
+                    data-title="Paradox of God">
+              ▶ Paradox of God
+            </button>
+          </div>
+         
           <div class="share-group"
                data-share-url="https://stonegrillresto.net/reflections/pages/the-lost-language-of-metaphor/read.html"
                data-share-title="The Lost Language of Metaphor — Ninox Antolihao"></div>
@@ -603,6 +615,23 @@
             document.write(createAudioPlayer('/reflections/pages/belief/beliefxgood.mp3', 'Belief'));
           </script>
         </div>
+        <div class="playlist">
+            <button class="track-link" type="button"
+                    data-src="/reflections/pages/moral-choice/moralchoice.mp3"
+                    data-title="Moral choice">
+              ▶ Moral Choice
+            </button>
+
+            <button class="track-link" type="button"
+                    data-src="/reflections/pages/divine-hiddeness/premiseofgod.mp3"
+                    data-title="The Divine Premise">
+              ▶ The Divine Premise
+            </button>
+          </div>
+           <div class="share-group"
+               data-share-url="https://stonegrillresto.net/reflections/pages/belief/index.html"
+               data-share-title="Belief and Goodness — Ninox Antolihao"></div>
+
       </article>
 
       <!-- =========================================
