--- a/reflections/index.html
+++ b/reflections/index.html
@@ -815,15 +815,20 @@
           <p>Even our quietest actions can shape the souls around us — for good or for harm.</p>
 
           <div class="meta">First Edition 2025 • Ninox Antolihao</div>
-
-          <div class="audio-wrap">
-            <p class="label">🎧 Audio Reflection: <strong>Silent Influence</strong></p>
-            <audio class="audio-player" controls preload="auto" style="width:100%">
-              <source src="/reflections/pages/silent-influence/silentinfluence.mp3" type="audio/mpeg">
-              Your browser does not support the audio element.
-            </audio>
-            <button class="btn ghost audio-stop" style="margin-top:8px" type="button">⏹ Stop</button>
+          
+          <div class="playlist">
+            <button class="track-link" type="button"
+                    data-src="/reflections/pages/silent-influence/silentinfluence.mp3"
+                    data-title="Silent Influence">
+              ▶ Silent Influence
+            </button>
+            <button class="track-link" type="button"
+                    data-src="/reflections/pages/the-paradox-of-god/theparadoxofgod.mp3"
+                    data-title="The Paradox of God">
+              ▶ The Paradox of God
+            </button>
           </div>
+          
 
           <div class="share-group"
                data-share-url="https://stonegrillresto.net/reflections/pages/silent-influence/read.html"
