Add audio element for noxpodcast

--- a/reflections/index.html
+++ b/reflections/index.html
@@ -71,6 +71,10 @@
   </audio>
 </section>
 
+  <audio controls preload="metadata">
+  <source src="noxpodcast_web_96k_mono.mp3" type="audio/mpeg">
+</audio>
+
   <!-- MAIN CONTENT -->
   <main class="wrap">
     <section class="grid">
