Modify audio source with versioning
Updated audio element to include versioning in the source URL.

--- a/reflections/index.html
+++ b/reflections/index.html
@@ -71,8 +71,8 @@
   </audio>
 </section>
 
-  <audio controls preload="metadata">
-  <source src="noxpodcast_web_96k_mono.mp3" type="audio/mpeg">
+  <audio controls preload="metadata" style="width:100%;">
+  <source src="./noxpodcast_web_96k_mono.mp3?v=1" type="audio/mpeg">
 </audio>
 
   <!-- MAIN CONTENT -->
