Revise content and styles in read.html for metaphor piece
Updated the formatting and content of the 'The Lost Language of Metaphor' page, including changes to headings, styles, and added sections.

--- a/reflections/pages/the-lost-language-of-metaphor/read.html
+++ b/reflections/pages/the-lost-language-of-metaphor/read.html
@@ -17,8 +17,8 @@
 
   <link rel="icon" href="/reflections/assets/favicon.ico" />
   <link rel="stylesheet" href="/reflections/assets/reflections-header.css?v=21" />
-  <link 
   <link rel="stylesheet" href="/reflections/assets/reflections.css?v=20">
+
   <style>
     :root{--bg:#1f1815;--paper:#2a211e;--ink:#f3e6dd;--muted:#c9b0a4;--accent:#ffb873;}
     body{margin:0;background:var(--bg);color:var(--ink);font-family:system-ui,-apple-system,BlinkMacSystemFont,"Segoe UI",sans-serif;line-height:1.75;}
@@ -26,15 +26,20 @@
     .paper{background:var(--paper);border:1px solid rgba(255,255,255,.06);border-radius:16px;padding:1.2rem 1.1rem;box-shadow:0 18px 60px rgba(0,0,0,.45);}
     .cover{width:100%;border-radius:14px;display:block;border:1px solid rgba(255,255,255,.07);margin-bottom:1rem;background:#000;}
     h1{margin:.2rem 0 .4rem;line-height:1.15;letter-spacing:.2px;font-size:1.8rem;}
+    h2{margin:1.2rem 0 .55rem;line-height:1.25;letter-spacing:.2px;font-size:1.25rem;}
     .subtitle{margin:0 0 1rem;color:var(--muted);font-size:1.02rem;}
+    .meta-note{margin:.25rem 0 0;color:var(--muted);font-size:.95rem;}
     .audio-wrap{margin:1rem 0 1.2rem;padding:.9rem;border-radius:14px;border:1px solid rgba(255,255,255,.08);background:rgba(0,0,0,.15);}
     hr{border:0;border-top:1px solid rgba(255,255,255,.10);margin:1.25rem 0;}
+    .divider{margin:1.25rem 0;text-align:center;color:var(--muted);letter-spacing:.4px}
+    .divider span{display:inline-block;padding:.25rem .6rem;border:1px solid rgba(255,255,255,.10);border-radius:999px;background:rgba(0,0,0,.10)}
   </style>
 </head>
 
 <body>
-  
+
   <div id="reflectionsHeader" data-current="the-lost-language-of-metaphor"></div>
+
   <!-- AUDIO: native first; JS will enhance and auto-fallback -->
   <section class="audio-wrap" id="audioMount" style="margin:16px 1rem;">
     <p class="label">🎧<strong>the lost language of metaphor.</strong></p>
@@ -43,7 +48,6 @@
       Your browser does not support the audio element.
     </audio>
   </section>
-
 
   <script>
     window.REFLECTION_PAGE = {
@@ -65,38 +69,251 @@
     <article class="paper">
       <img class="cover" src="/reflections/pages/the-lost-language-of-metaphor/lostlanguagesmall.jpg" alt="The Lost Language of Metaphor cover">
 
-      <h1>The Lost Language of Metaphor</h1>
+      <h1>THE LOST LANGUAGE OF METAPHOR</h1>
       <div class="subtitle">
-        A Solitude Reflection by Ninox Antolihao<br>
-        On symbols, literalism, and the map that replaced the landscape.
+        Speechify Version — Optimized for Gwyneth Paltrow’s calm, reflective, cinematic tone
+        <div class="meta-note">
+          Title: <strong>The Lost Language of Metaphor</strong>
+        </div>
       </div>
-
-      <p>
-        Human beings once spoke to the deepest parts of life using metaphor.
-        Not because they were weak thinkers -- but because some truths cannot be held
-        by literal sentences without becoming distorted.
-      </p>
-
-      <p>
-        Metaphor is not decoration. It is a bridge: from the visible world to the invisible meanings
-        that shape the heart. A story can carry what plain instruction cannot.
-      </p>
-
-      <p>
-        But when metaphor is forgotten, people begin to worship the symbol instead of what it points to.
-        The map becomes more sacred than the landscape. The instruction about love becomes more important
-        than the actual feeling of love.
-      </p>
-
-      <p>
-        This is one reason religion can drift: not because the divine is absent, but because language becomes rigid.
-        When symbols are treated as literal facts, they stop guiding the soul and start controlling the mind.
-      </p>
 
       <hr>
 
-      <p style="font-size:.9rem;color:var(--muted);">
-        A living faith stays metaphor-literate: it remembers that the symbol is not the thing itself.
+      <h2>INTRODUCTION</h2>
+
+      <p>Once upon a time…<br>
+      before churches…<br>
+      before scriptures…<br>
+      there were only stories.</p>
+
+      <p>Stories whispered around fires.<br>
+      Stories told not to prove anything…<br>
+      but to help us understand<br>
+      the quiet rhythm of existence.</p>
+
+      <p>Back then, the story was a mirror.<br>
+      But slowly… the mirror became a wall.<br>
+      And what once guided the heart…<br>
+      began to confine the mind.</p>
+
+      <p>Religion didn’t just interpret the mystery.<br>
+      It declared its own interpretation<br>
+      as absolute truth.</p>
+
+      <p>Instead of saying,<br>
+      “This is how we understand the mystery,”<br>
+      it insisted,<br>
+      “This is the mystery…<br>
+      and there is no other way.”</p>
+
+      <p>That is not spirituality.<br>
+      That is mythology mistaken for reality.</p>
+
+      <hr>
+
+      <h2>FROM SYMBOLS… TO STORIES… TO DOGMA</h2>
+
+      <p>Ancient teachings began as symbols—<br>
+      gentle metaphors<br>
+      for truths too vast to be spoken.</p>
+
+      <p>But as centuries passed,<br>
+      symbols hardened into stories…<br>
+      and stories became rules.</p>
+
+      <p>When a prophet said,<br>
+      “This story is what happened,”<br>
+      instead of,<br>
+      “This story means something,”<br>
+      the myth froze…<br>
+      and humanity lost the metaphor.</p>
+
+      <p>Creation may have been written<br>
+      as a poetic description of cosmic order—<br>
+      yet it was treated<br>
+      as a literal event in time.</p>
+
+      <p>And when myth is taken as fact…<br>
+      our search for deeper meaning stops.</p>
+
+      <hr>
+
+      <h2>WHY LITERAL TRUTH IS PROTECTED</h2>
+
+      <p>Literal belief brings power.</p>
+
+      <p>When a religion claims<br>
+      that it alone holds the truth,<br>
+      it gains influence<br>
+      over morality…<br>
+      over fear…<br>
+      over hope.</p>
+
+      <p>If people believe<br>
+      their version of God is the only one,<br>
+      then questioning becomes rebellion.<br>
+      And obedience becomes salvation.</p>
+
+      <p>At that point…<br>
+      it is no longer faith.<br>
+      It is authority…<br>
+      disguised as certainty.</p>
+
+      <hr>
+
+      <h2>METAPHOR: THE DOORWAY TO WISDOM</h2>
+
+      <p>Myth, when understood symbolically,<br>
+      is not false.<br>
+      It is layered truth.</p>
+
+      <p>Literalism shrinks it.<br>
+      Metaphor expands it.</p>
+
+      <p>The serpent in Eden<br>
+      is not simply a creature—<br>
+      it is temptation…<br>
+      awakening…<br>
+      transformation.</p>
+
+      <p>The cross is not only wood—<br>
+      it is the human struggle<br>
+      between ego and surrender.</p>
+
+      <p>The problem was never religion.<br>
+      The problem was forgetting<br>
+      how to read its language.</p>
+
+      <p>We stopped reading poetry…<br>
+      and began enforcing law.</p>
+
+      <hr>
+
+      <h2>THE EVOLUTION OF CONSCIOUSNESS</h2>
+
+      <p>What you’re sensing now<br>
+      is what mystics have sensed<br>
+      for thousands of years:</p>
+
+      <p>Humanity rises when it stops<br>
+      worshipping the symbol…<br>
+      and begins understanding<br>
+      the meaning behind it.</p>
+
+      <p>Where God is not a being far away…<br>
+      but the living pattern<br>
+      woven into everything.</p>
+
+      <p>We—this generation—<br>
+      are learning to unfreeze the metaphor.<br>
+      To read the divine story<br>
+      as it was always meant to be read…</p>
+
+      <p>Not as a map of the sky—<br>
+      but as a mirror of consciousness.</p>
+
+      <hr>
+
+      <h2>MAIN REFLECTION</h2>
+
+      <p>Religion was never the enemy of truth.<br>
+      Misunderstanding was.</p>
+
+      <p>The earliest seekers<br>
+      had no science…<br>
+      no instruments…<br>
+      only imagination.</p>
+
+      <p>They painted meaning with myth—<br>
+      transforming invisible truths<br>
+      into living poetry.</p>
+
+      <p>But when later generations<br>
+      stopped seeing myth as symbol…<br>
+      and started treating it as fact…<br>
+      the poetry became a prison.</p>
+
+      <p>A serpent of wisdom<br>
+      was turned into an enemy.<br>
+      A tree of knowledge<br>
+      was turned into a threat.<br>
+      A universe born of divine harmony<br>
+      was reduced<br>
+      to seven literal days.</p>
+
+      <p>Literalism shrank the infinite.<br>
+      Myth became dogma.<br>
+      Faith became obedience.<br>
+      Interpretation became institution.<br>
+      And the living spirit of truth<br>
+      was replaced by authority.</p>
+
+      <p>The real tragedy<br>
+      is not that religion exists—<br>
+      but that it forgot<br>
+      its original language.</p>
+
+      <p>It began as music for the soul…<br>
+      and ended as a list of rules.<br>
+      It preached love…<br>
+      but demanded conformity.<br>
+      It offered symbols of awakening…<br>
+      but punished those<br>
+      who could see beyond them.</p>
+
+      <p>Yet the sacred never disappears.<br>
+      It simply waits—<br>
+      quietly—<br>
+      for someone willing<br>
+      to translate again.</p>
+
+      <p>The wise do not reject scripture.<br>
+      They listen to it differently.</p>
+
+      <p>They see God not as a figure—<br>
+      but as the pulse<br>
+      within all things.</p>
+
+      <p>They see heaven not as a place—<br>
+      but as a state<br>
+      of clarity.</p>
+
+      <p>They see sin not as punishment—<br>
+      but as separation<br>
+      from awareness.</p>
+
+      <p>The lost language of metaphor<br>
+      is the bridge<br>
+      between faith and science…<br>
+      between mystery and meaning…<br>
+      between heart and reason.</p>
+
+      <p>When we rediscover it…<br>
+      the wall turns back into a window.<br>
+      And through that window…<br>
+      we find not religion…<br>
+      but revelation.</p>
+
+      <div class="divider"><span>— ❖ —</span></div>
+
+      <h2>ABOUT THE AUTHOR</h2>
+
+      <p>Ninox Antolihao is a Filipino thinker, creator,<br>
+      and founder of Stone Grill Restaurant.<br>
+      A member of the Magma Cowboys community,<br>
+      his work weaves philosophy, science, and spirituality—<br>
+      inviting readers to look beyond dogma<br>
+      and rediscover meaning through awareness.</p>
+
+      <p>Through his series “Moments of Solitude,”<br>
+      he writes to awaken<br>
+      the quiet places within—<br>
+      where reason meets reverence,<br>
+      and the sacred is understood as truth…<br>
+      not tradition.</p>
+
+      <p style="font-size:.95rem;color:var(--muted);margin-top:1rem;">
+        First Edition • 2025 — Ninox Antolihao
       </p>
     </article>
   </main>
