--- a/reflections/pages/the-lost-language-of-metaphor/read.html
+++ b/reflections/pages/the-lost-language-of-metaphor/read.html
@@ -31,6 +31,15 @@
       border-radius:16px;
       padding:1.2rem 1.1rem;
       box-shadow:0 18px 60px rgba(0,0,0,.45);
+      position:relative; /* ✅ establish stacking context */
+      z-index:1;
+    }
+
+    /* ✅ FIX: force audio block above anything that might overlap */
+    #audioMount{
+      position:relative;
+      z-index:50;
+      isolation:isolate; /* helps when external CSS does weird stacking */
     }
 
     .cover{
@@ -40,6 +49,9 @@
       border:1px solid rgba(255,255,255,.07);
       margin-bottom:1rem;
       background:#000;
+
+      position:relative; /* ✅ ensure we can control its layering */
+      z-index:1;         /* ✅ keep it below audioMount */
     }
 
     h1{margin:.2rem 0 .4rem;line-height:1.15;letter-spacing:.2px;font-size:1.8rem;}
@@ -98,7 +110,7 @@
     </section>
 
     <article class="paper">
-      
+      <img class="cover" src="/reflections/pages/the-lost-language-of-metaphor/lostlanguagesmall.jpg" alt="The Lost Language of Metaphor cover">
 
       <h1>THE LOST LANGUAGE OF METAPHOR</h1>
       <div class="subtitle">
@@ -127,15 +139,15 @@
       And what once guided the heart…<br>
       began to confine the mind.</p>
 
-      <p>Religion didn't just interpret the mystery.<br>
+      <p>Religion didn’t just interpret the mystery.<br>
       It declared its own interpretation<br>
       as absolute truth.</p>
 
       <p>Instead of saying,<br>
-      "This is how we understand the mystery,"<br>
+      “This is how we understand the mystery,”<br>
       it insisted,<br>
-      "This is the mystery…<br>
-      and there is no other way."</p>
+      “This is the mystery…<br>
+      and there is no other way.”</p>
 
       <p>That is not spirituality.<br>
       That is mythology mistaken for reality.</p>
@@ -144,7 +156,7 @@
 
       <h2>FROM SYMBOLS… TO STORIES… TO DOGMA</h2>
 
-      <p>Ancient teachings began as symbols--<br>
+      <p>Ancient teachings began as symbols—<br>
       gentle metaphors<br>
       for truths too vast to be spoken.</p>
 
@@ -153,14 +165,14 @@
       and stories became rules.</p>
 
       <p>When a prophet said,<br>
-      "This story is what happened,"<br>
+      “This story is what happened,”<br>
       instead of,<br>
-      "This story means something,"<br>
+      “This story means something,”<br>
       the myth froze…<br>
       and humanity lost the metaphor.</p>
 
       <p>Creation may have been written<br>
-      as a poetic description of cosmic order--<br>
+      as a poetic description of cosmic order—<br>
       yet it was treated<br>
       as a literal event in time.</p>
 
@@ -202,12 +214,12 @@
       Metaphor expands it.</p>
 
       <p>The serpent in Eden<br>
-      is not simply a creature--<br>
+      is not simply a creature—<br>
       it is temptation…<br>
       awakening…<br>
       transformation.</p>
 
-      <p>The cross is not only wood--<br>
+      <p>The cross is not only wood—<br>
       it is the human struggle<br>
       between ego and surrender.</p>
 
@@ -222,7 +234,7 @@
 
       <h2>THE EVOLUTION OF CONSCIOUSNESS</h2>
 
-      <p>What you're sensing now<br>
+      <p>What you’re sensing now<br>
       is what mystics have sensed<br>
       for thousands of years:</p>
 
@@ -235,12 +247,12 @@
       but the living pattern<br>
       woven into everything.</p>
 
-      <p>We--this generation--<br>
+      <p>We—this generation—<br>
       are learning to unfreeze the metaphor.<br>
       To read the divine story<br>
       as it was always meant to be read…</p>
 
-      <p>Not as a map of the sky--<br>
+      <p>Not as a map of the sky—<br>
       but as a mirror of consciousness.</p>
 
       <hr>
@@ -255,7 +267,7 @@
       no instruments…<br>
       only imagination.</p>
 
-      <p>They painted meaning with myth--<br>
+      <p>They painted meaning with myth—<br>
       transforming invisible truths<br>
       into living poetry.</p>
 
@@ -280,7 +292,7 @@
       was replaced by authority.</p>
 
       <p>The real tragedy<br>
-      is not that religion exists--<br>
+      is not that religion exists—<br>
       but that it forgot<br>
       its original language.</p>
 
@@ -293,23 +305,23 @@
       who could see beyond them.</p>
 
       <p>Yet the sacred never disappears.<br>
-      It simply waits--<br>
-      quietly--<br>
+      It simply waits—<br>
+      quietly—<br>
       for someone willing<br>
       to translate again.</p>
 
       <p>The wise do not reject scripture.<br>
       They listen to it differently.</p>
 
-      <p>They see God not as a figure--<br>
+      <p>They see God not as a figure—<br>
       but as the pulse<br>
       within all things.</p>
 
-      <p>They see heaven not as a place--<br>
+      <p>They see heaven not as a place—<br>
       but as a state<br>
       of clarity.</p>
 
-      <p>They see sin not as punishment--<br>
+      <p>They see sin not as punishment—<br>
       but as separation<br>
       from awareness.</p>
 
@@ -325,26 +337,26 @@
       we find not religion…<br>
       but revelation.</p>
 
-      <div class="divider"><span>-- ❖ --</span></div>
+      <div class="divider"><span>— ❖ —</span></div>
 
       <h2>ABOUT THE AUTHOR</h2>
 
       <p>Ninox Antolihao is a Filipino thinker, creator,<br>
       and founder of Stone Grill Restaurant.<br>
       A member of the Magma Cowboys community,<br>
-      his work weaves philosophy, science, and spirituality--<br>
+      his work weaves philosophy, science, and spirituality—<br>
       inviting readers to look beyond dogma<br>
       and rediscover meaning through awareness.</p>
 
-      <p>Through his series "Moments of Solitude,"<br>
+      <p>Through his series “Moments of Solitude,”<br>
       he writes to awaken<br>
-      the quiet places within--<br>
+      the quiet places within—<br>
       where reason meets reverence,<br>
       and the sacred is understood as truth…<br>
       not tradition.</p>
 
       <p style="font-size:.95rem;color:var(--muted);margin-top:1rem;">
-        First Edition • 2025 -- Ninox Antolihao
+        First Edition • 2025 — Ninox Antolihao
       </p>
     </article>
   </main>
