--- a/reflections/index.html
+++ b/reflections/index.html
@@ -79,7 +79,50 @@
   <main class="wrap">
     <section class="grid">
 
-<!-- =========================================
+      <!-- =========================================
+           CARD: THE GOOD AND EVIL WITHIN US
+           ========================================= -->
+      <article class="card">
+        <div class="left">
+          <a class="book-link" href="/reflections/pages/godevil/read.html" target="_blank" rel="noopener">
+            <img class="book-cover"
+                 src="/reflections/pages/godevil/godevil.png"
+                 alt="The Good and Evil within us cover"
+                 onerror="this.src='/reflections/assets/placeholder.jpg'">
+          </a>
+        </div>
+
+        <div class="right">
+          <h3>
+            <a class="title-link" href="/reflections/pages/godevil/read.html" target="_blank" rel="noopener">
+              The Madness of Faith
+            </a>
+          </h3>
+
+          <p>Faith was never meant to destroy the mind but to guide it toward clarity. Real belief must enlighten, not enslave.</p>
+          <div class="playlist">
+            <button class="track-link" type="button"
+                    data-src="/reflections/pages/the-madness-of-fath/the-madness-of-faith.mp3"
+                    data-title="the madness if faith">
+              ▶ The MADNESS OF FAITH
+            </button>
+
+            <button class="track-link" type="button"
+                    data-src="/reflections/pages/the-god-we-created/the-gods-we-create.mp3"
+                    data-title="The God We Created">
+              ▶ The God We Created (Short)
+            </button>
+          </div>
+          
+          <div class="meta">
+            <div class="share-group"
+                 data-share-url="https://stonegrillresto.net/reflections/pages//read.html"
+                 data-share-title="The Madness of Faith — Ninox Antolihao">First Edition 2025 •</div>
+          </div>
+        </div>
+      </article>
+      
+      <!-- =========================================
            CARD: THE MADNESS OF FAITH
            ========================================= -->
       <article class="card">
