--- a/reflections/index.html
+++ b/reflections/index.html
@@ -86,7 +86,7 @@
         <div class="left">
           <a class="book-link" href="/reflections/pages/godevil/read.html" target="_blank" rel="noopener">
             <img class="book-cover"
-                 src="/reflections/pages/godevil/godevil.png"
+                 src="/reflections/pages/godevil/godevil.jpg"
                  alt="The Good and Evil within us cover"
                  onerror="this.src='/reflections/assets/placeholder.jpg'">
           </a>
@@ -95,16 +95,16 @@
         <div class="right">
           <h3>
             <a class="title-link" href="/reflections/pages/godevil/read.html" target="_blank" rel="noopener">
-              The Madness of Faith
+              the good and evil within Us
             </a>
           </h3>
 
-          <p>Faith was never meant to destroy the mind but to guide it toward clarity. Real belief must enlighten, not enslave.</p>
+          <p>unlocking the door from dogma to sovereignty.</p>
           <div class="playlist">
             <button class="track-link" type="button"
-                    data-src="/reflections/pages/the-madness-of-fath/the-madness-of-faith.mp3"
-                    data-title="the madness if faith">
-              ▶ The MADNESS OF FAITH
+                    data-src="/reflections/pages/godevil/godevil2.mp3"
+                    data-title="the good and evil within Us">
+              ▶ the good and evil within Us
             </button>
 
             <button class="track-link" type="button"
