--- a/reflections/index.html
+++ b/reflections/index.html
@@ -115,11 +115,12 @@
           </div>
           
           <div class="meta">
-            <div class="share-group"
-                 data-share-url="https://stonegrillresto.net/reflections/pages//read.html"
-                 data-share-title="The Madness of Faith — Ninox Antolihao">First Edition 2025 •</div>
-          </div>
-        </div>
+  <div class="share-group"
+       data-share-url="https://stonegrillresto.net/reflections/pages/godevil/read.html"
+       data-share-title="The Good and Evil within Us — Ninox Antolihao">
+    First Edition 2025 •
+  </div>
+</div>
       </article>
       
       <!-- =========================================
