--- a/reflections/index.html
+++ b/reflections/index.html
@@ -108,9 +108,9 @@
             </button>
 
             <button class="track-link" type="button"
-                    data-src="/reflections/pages/the-god-we-created/the-gods-we-create.mp3"
-                    data-title="The God We Created">
-              ▶ The God We Created (Short)
+                    data-src="/reflections/pages/gidevil/godevil1.mp3"
+                    data-title="The Good and evil in us">
+              ▶ The Good and evil in us (Short)
             </button>
           </div>
           
