--- a/reflections/pages/godevil/read.html
+++ b/reflections/pages/godevil/read.html
@@ -358,7 +358,7 @@
             <div class="badge">Solitude Reflection</div>
             <div class="cover-title">The Good and Evil within Us</div>
             <div class="cover-author">Ninox Antolihao</div>
-            <div class="hint">Tip: replace <strong>cover.png</strong> in this folder and update og:image if you want a real cover image.</div>
+            <div class="hint">Tip: replace <strong>cover.png</strong>unlocking the door from dogma to sovereignty</div>
           </div>
         </div>
       </div>
