--- a/reflections/index.html
+++ b/reflections/index.html
@@ -110,7 +110,7 @@
             <button class="track-link" type="button"
                     data-src="/reflections/pages/gidevil/godevil1.mp3"
                     data-title="The Good and evil in us">
-              ▶ The Good and evil in us (Short)
+              ▶ The Good and evil in us
             </button>
           </div>
           
