--- a/reflections/pages/godevil/read.html
+++ b/reflections/pages/godevil/read.html
@@ -358,7 +358,7 @@
             <div class="badge">Solitude Reflection</div>
             <div class="cover-title">The Good and Evil within Us</div>
             <div class="cover-author">Ninox Antolihao</div>
-            <div class="hint">Tip: replace <strong>cover.png</strong>unlocking the door from dogma to sovereignty</div>
+            <div class="hint"> <strong>godevil.jpg</strong>unlocking the door from dogma to sovereignty</div>
           </div>
         </div>
       </div>
@@ -369,6 +369,31 @@
       </div>
     </section>
 
+    <!-- AUDIO PLAYER + PLAYLIST -->
+<section class="audio-wrap">
+  <div class="audio-wrapper">
+    <audio id="reflectionAudio" controls preload="metadata">
+      <source id="audioSource" src="" type="audio/mpeg">
+      Your browser does not support the audio element.
+    </audio>
+
+    <div class="playlist">
+      <!-- ✅ Track 1 -->
+      <button class="track-link" type="button"
+              data-src="/reflections/pages/godevil/godevil2.mp3"
+              data-title="The Good and Evil within Us">
+        ▶ The Good and Evil within Us
+      </button>
+
+      <!-- ✅ Track 2 -->
+      <button class="track-link" type="button"
+              data-src="/reflections/pages/godevil/godevil1.mp3"
+              data-title="The Good and Evil in Us">
+        ▶ The Good and Evil in Us
+      </button>
+    </div>
+  </div>
+</section>
     <!-- CONTENT -->
     <article class="card" aria-label="Main Content">
       <h2>Introduction</h2>
