--- a/reflections/pages/godevil/read.html
+++ b/reflections/pages/godevil/read.html
@@ -380,15 +380,21 @@
     <div class="playlist">
       <!-- ✅ Track 1 -->
       <button class="track-link" type="button"
-              data-src="/reflections/pages/godevil/godevil2.mp3"
+              data-src="/reflections/pages/godevil/godevil1.mp3"
               data-title="The Good and Evil within Us">
         ▶ The Good and Evil within Us
       </button>
 
+      <button class="track-link" type="button"
+              data-src="/reflections/pages/godevil/godevil-podcast.mp3"
+              data-title="The Good and Evil in Us (Podcast)">
+        ▶ The Good and Evil in Us (PODCAST)
+      </button>
+
       <!-- ✅ Track 2 -->
       <button class="track-link" type="button"
-              data-src="/reflections/pages/godevil/godevil1.mp3"
-              data-title="The Good and Evil in Us">
+              data-src="/reflections/pages/godevil/godevil2.mp3"
+              data-title="The Good and Evil in Us (Part 2)">
         ▶ The Good and Evil in Us
       </button>
     </div>
