--- a/reflections/index.html
+++ b/reflections/index.html
@@ -202,14 +202,8 @@
             
              <button class="track-link" type="button"
                     data-src="/reflections/pages/the-madness-of-fath/the-madness-of-faith.mp3"
-                    data-title="The Madness of Faith">
-              ▶ The Madness of Faith
-            </button>
-
-            <button class="track-link" type="button"
-                    data-src="/reflections/pages/the-paradox-of-god/paradoxofgod.mp3"
-                    data-title="Paradox of God">
-              ▶ Paradox of God
+                    data-title="The Deity ( podcast )">
+              ▶ The Deity ( Podcast )
             </button>
           </div>
           <p class="meta">
