--- a/reflections/index.html
+++ b/reflections/index.html
@@ -158,9 +158,9 @@
             </button>
 
             <button class="track-link" type="button"
-                    data-src="/reflections/pages/the-god-we-created/the-gods-we-create.mp3"
-                    data-title="The God We Created">
-              ▶ The God We Created (Short)
+                    data-src="/reflections/pages/the-madness-of-fath/madness-podcast.mp3"
+                    data-title="madness Podcast">
+              ▶ The madness of faith (podcast)
             </button>
           </div>
           
