--- a/reflections/index.html
+++ b/reflections/index.html
@@ -165,11 +165,12 @@
           </div>
           
           <div class="meta">
-            <div class="share-group"
-                 data-share-url="https://stonegrillresto.net/reflections/pages/the-madness-of-fath/read.html"
-                 data-share-title="The Madness of Faith — Ninox Antolihao">First Edition 2025 •</div>
-          </div>
-        </div>
+  <div class="share-group"
+       data-share-url="https://stonegrillresto.net/reflections/pages/the-madness-of-fath//read.html"
+       data-share-title="The Madness of faith — Ninox Antolihao">
+    First Edition 2025 •
+  </div>
+</div>
       </article>
 
       <!-- =========================================
