--- a/reflections/pages/the-madness-of-fath/read.html
+++ b/reflections/pages/the-madness-of-fath/read.html
@@ -506,10 +506,10 @@
               <div class="playlist-duration">--:--</div>
             </div>
 
-            <div class="playlist-row" data-src="/reflections/pages/initial-premise/initial-premise.mp3">
+            <div class="playlist-row" data-src="/reflections/pages/the-madness-of-fath/faithmadness-podcast.mp3">
               <div class="playlist-main">
-                <div class="playlist-title">Initial Premise</div>
-                <div class="playlist-sub">The Ethical Weight of a Flawed Design</div>
+                <div class="playlist-title">ninox podcast</div>
+                <div class="playlist-sub">ninox Deep Dive podcast</div>
               </div>
               <div class="playlist-duration">--:--</div>
             </div>
