Update podcast details in read.html

--- a/reflections/pages/the-god-we-created/read.html
+++ b/reflections/pages/the-god-we-created/read.html
@@ -497,11 +497,11 @@
 
           <!-- Track 2 -->
           <div class="playlist-row"
-               data-src="/reflections/pages/the-madness-of-fath/the-madness-of-faith.mp3">
+               data-src="/reflections/pages/the-god-we-created/thegodwecreate-podcast.mp3">
             <div class="playlist-main">
-              <div class="playlist-title">The Madness of Faith</div>
+              <div class="playlist-title">PODCAST</div>
               <div class="playlist-sub scroll-wrap">
-                <div class="scroll-text">When a belief demands the death of reason…</div>
+                <div class="scroll-text">the late night show featuring the God we created</div>
               </div>
             </div>
             <div class="playlist-duration">--:--</div>
